Fixed spacing issues (regular and mobile)

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -109,11 +109,15 @@ article {
   
   // the top one needs special treatment
   ul > li:first-child {
-    margin-top: 44px;
+    margin-top: 43px;
   }
 
   ul > li:last-child {
     margin-bottom: 150px;
+  }
+
+  ul {
+    padding-left: 0px;
   }
 
   p {
@@ -283,6 +287,10 @@ $footer-height: 2.5rem;
   article {
     h1 {
       margin-top: 0em;
+    }
+
+    ul > li:first-child {
+      margin-top: 0px;
     }
   }
 }
